--- a/web/themes/saunacamp/sass/layouts/_dries.scss
+++ b/web/themes/saunacamp/sass/layouts/_dries.scss
@@ -1,9 +1,10 @@
 .l-dries {
   background: $main-color-1;
-  overflow: hidden;
   img {
     width: 110%;
     height: auto;
+    -ms-transform: rotate(-5deg); /* IE 9 */
+    -webkit-transform: rotate(-5deg); 
     transform: rotate(-5deg);
     margin-left: -5%;
     margin-right: -5%;
